--- a/public/find-die_deep.html
+++ b/public/find-die_deep.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8" />
-<title>抜型ファインダー v3</title>
+<title>抜型ファインダー voice</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
   :root {
@@ -63,9 +63,7 @@
     pointer-events: none;
     animation: bigmsg-fade 1.2s ease-out forwards;
   }
-  .bigmsg .sub {
-    display:block; font-size: .8em; opacity: .9; margin-top: 2px;
-  }
+  .bigmsg .sub { display:block; font-size: .8em; opacity: .9; margin-top: 2px; }
   @keyframes bigmsg-fade {
     0%   { opacity: 0; transform: translateX(-50%) translateY(-8px); }
     10%  { opacity: 1; transform: translateX(-50%) translateY(0); }
@@ -134,60 +132,119 @@
       currentShelf: null,
       scanHistory: new Map(),
     };
+
     /* ====== 音声読み上げ（見つかりました / WorkName 付き） ====== */
     let __ttsReady = false;
     let __jpVoices = [];
     let __lastSpeak = 0;           // 連続検出の連呼防止
     const __speakCooldownMs = 1500;
 
-    /** 初期化：ユーザー操作後に1回呼ばれるとiOSでも安定 */
     function initTTS() {
       if (!('speechSynthesis' in window)) return;
       const synth = window.speechSynthesis;
-
       function loadVoices() {
         const voices = synth.getVoices();
-        // 日本語ボイスを優先的に抽出
-        __jpVoices = voices.filter(v =>
-          /ja|jpn|日本語/i.test(v.lang) || /日本語|Kyoko|Google 日本語/i.test(v.name)
-        );
+        // 日本語ボイス抽出＋好みの順に並べ替え（高めトーンに合いやすい候補を先頭へ）
+        __jpVoices = voices
+          .filter(v => /ja|jpn|日本語/i.test(v.lang) || /日本語/i.test(v.name))
+          .sort((a,b) => {
+            const pref = ['Google 日本語', 'Kyoko', 'Otoya']; // 上にあるほど優先
+            const ia = pref.findIndex(p => a.name.includes(p));
+            const ib = pref.findIndex(p => b.name.includes(p));
+            return (ia === -1 ? 999 : ia) - (ib === -1 ? 999 : ib);
+          });
         __ttsReady = true;
       }
       loadVoices();
       synth.onvoiceschanged = loadVoices;
     }
 
-    // 最低限の句読点ポーズを付ける（読みやすさ向上）
-    function punct(s) { return s.replace(/\s+/g, ' ').trim(); }
+    const punct = s => String(s||"").replace(/\s+/g, ' ').trim();
+    // --- 追加：TTSの“起こし”と確実実行ユーティリティ ---
+    function unlockTTS() {
+      if (!('speechSynthesis' in window)) return;
+      const u = new SpeechSynthesisUtterance(' '); // 無音に近い短い発話で起こす
+      u.lang = 'ja-JP'; u.volume = 0; u.rate = 1; u.pitch = 1;
+      try { window.speechSynthesis.speak(u); } catch {}
+    }
 
-    /** 連呼防止付きの発話 */
+    /** voices がまだでも少し待ってから確実に発話 */
+    function speakAfterReady(utterance) {
+      if (!('speechSynthesis' in window)) return;
+      const synth = window.speechSynthesis;
+      // すぐに voices が空なら少し待ってから再試行
+      const trySpeak = (retries = 2) => {
+        try { synth.cancel(); } catch {}
+        const voices = synth.getVoices();
+        if (voices && voices.length && __jpVoices.length === 0) {
+          __jpVoices = voices.filter(v =>
+            /ja|jpn|日本語/i.test(v.lang) || /日本語|Kyoko|Google 日本語/i.test(v.name)
+          );
+          if (__jpVoices.length) utterance.voice = __jpVoices[0];
+        }
+        try { synth.speak(utterance); }
+        catch (e) {
+          if (retries > 0) setTimeout(() => trySpeak(retries - 1), 200);
+        }
+      };
+      trySpeak();
+    }// --- 追加：TTSの“起こし”と確実実行ユーティリティ ---
+    function unlockTTS() {
+      if (!('speechSynthesis' in window)) return;
+      const u = new SpeechSynthesisUtterance(' '); // 無音に近い短い発話で起こす
+      u.lang = 'ja-JP'; u.volume = 0; u.rate = 1; u.pitch = 1;
+      try { window.speechSynthesis.speak(u); } catch {}
+    }
+
+    /** voices がまだでも少し待ってから確実に発話 */
+    function speakAfterReady(utterance) {
+      if (!('speechSynthesis' in window)) return;
+      const synth = window.speechSynthesis;
+      // すぐに voices が空なら少し待ってから再試行
+      const trySpeak = (retries = 2) => {
+        try { synth.cancel(); } catch {}
+        const voices = synth.getVoices();
+        if (voices && voices.length && __jpVoices.length === 0) {
+          __jpVoices = voices.filter(v =>
+            /ja|jpn|日本語/i.test(v.lang) || /日本語|Kyoko|Google 日本語/i.test(v.name)
+          );
+          if (__jpVoices.length) utterance.voice = __jpVoices[0];
+        }
+        try { synth.speak(utterance); }
+        catch (e) {
+          if (retries > 0) setTimeout(() => trySpeak(retries - 1), 200);
+        }
+      };
+      trySpeak();
+    }
+
+
     function speakFoundOnce(workName /* string | undefined */) {
       if (!('speechSynthesis' in window)) return;
       const now = performance.now();
-      if (now - __lastSpeak < __speakCooldownMs) return; // 直近はスキップ
+      if (now - __lastSpeak < __speakCooldownMs) return;
       __lastSpeak = now;
 
-      const synth = window.speechSynthesis;
-      // 詰まり防止
-      try { synth.cancel(); } catch {}
-
+      // ★ セリフを変更（WorkNameがあれば差し込み）
       const hasWN = !!workName && String(workName).trim().length > 0;
       const text = hasWN
-        ? `お探しの、${workName}、が見つかりました。`
-        : `見つかりました。`;
+        ? `お探しの型、${workName}、が見つかりました。`
+        : `お探しの型が見つかりました。`;
 
       const u = new SpeechSynthesisUtterance(punct(text));
       u.lang   = 'ja-JP';
-      u.rate   = 1.0;  // 0.1–10
-      u.pitch  = 1.0;  // 0–2
-      u.volume = 1.0;  // 0–1
+      u.rate   = 1.05;   // 少し速め
+      u.pitch  = 1.3;    // ★ 高めのトーン
+      u.volume = 1.0;
 
+      // 好みの日本語ボイスがあれば選択
       if (__jpVoices.length > 0) u.voice = __jpVoices[0];
 
-      try { synth.speak(u); } catch {}
+      speakAfterReady(u);  // ← 前回入れた“確実に発話”ユーティリティを使う
     }
 
-    // iOS対策：最初のユーザー操作時に初期化
+
+
     document.addEventListener('pointerdown', function __once() {
       initTTS();
       document.removeEventListener('pointerdown', __once, true);
@@ -197,7 +254,6 @@
     // ---- 環境判定（Android対策）----
     const isAndroid = /Android/i.test(navigator.userAgent);
 
-    // CSS変数→色の取得（空ならフォールバック）
     function cssVarOr(name, fallback) {
       const v = getComputedStyle(document.documentElement).getPropertyValue(name);
       const s = (v || '').trim();
@@ -265,39 +321,25 @@
     const dieKey = (bn, wc) => `${(bn || "").trim().toLowerCase()}@@${(wc || "").trim().toLowerCase()}`;
 
     function drawBox(points, color, label, style = 'solid') {
-      if (!points || points.length < 4) return;
-      overlayCtx.save();
+      if (!points || points.length < 4) return;
+      overlayCtx.save();
 
-      // Androidでは赤枠をより強く（太線＋点線＋影なし）
-      const isNG = (color === CONFIG.colors.ng);
-      // ↓ 線幅の分岐は残しても良いですが、簡潔にするため合わせてもOKです
-      overlayCtx.lineWidth = isNG ? 4 : (color === CONFIG.colors.ok ? 5 : 3);
-/*
-      overlayCtx.lineWidth = isNG
-        ? (isAndroid ? 5 : 4) 
-        : (color === CONFIG.colors.ok ? 5 : 3);
-*/
+      const isNG = (color === CONFIG.colors.ng);
+      overlayCtx.lineWidth = isNG ? 4 : (color === CONFIG.colors.ok ? 5 : 3);
+      overlayCtx.setLineDash(style === 'dashed' ? [8, 6] : []);
+      overlayCtx.shadowColor = color;
+      overlayCtx.shadowBlur = 4;
 
-      // ▼▼▼ 修正箇所 ▼▼▼
-      // if (isAndroid && isNG) {
-      //   overlayCtx.setLineDash([10, 7]); // 目立つ点線
-      //   overlayCtx.shadowBlur = 0;       // 影を切る（描画差異対策）
-      // } else {
-        overlayCtx.setLineDash(style === 'dashed' ? [8, 6] : []);
-        overlayCtx.shadowColor = color;
-        overlayCtx.shadowBlur = 4;
-      // }
-      // ▲▲▲ 修正箇所 ▲▲▲
+      overlayCtx.strokeStyle = color;
+      overlayCtx.beginPath();
+      overlayCtx.moveTo(points[0].x, points[0].y);
+      for (let i = 1; i < points.length; i++) overlayCtx.lineTo(points[i].x, points[i].y);
+      overlayCtx.closePath();
+      overlayCtx.stroke();
 
-      overlayCtx.strokeStyle = color;
-      overlayCtx.beginPath();
-      overlayCtx.moveTo(points[0].x, points[0].y);
-      for (let i = 1; i < points.length; i++) overlayCtx.lineTo(points[i].x, points[i].y);
-      overlayCtx.closePath();
-      overlayCtx.stroke();
+      overlayCtx.restore();
+    }
 
-      // ... (以下、変更なし) ...
-    }
     function showToastNearBox(text, points) {
       if(!points || points.length < 2) return;
       const el = document.createElement("div");
@@ -450,7 +492,6 @@
           if (isMatch) {
             drawBox(pts, CONFIG.colors.ok, "一致", 'solid');
           } else {
-            // Androidでの視認性を最大化（点線＋太線）
             drawBox(pts, CONFIG.colors.ng, (p ? `不一致 [${p.bn}/${p.wc}]` : "不一致"), 'dashed');
           }
 
@@ -462,11 +503,14 @@
             if (navigator.vibrate) { navigator.vibrate(150); }
             showBigMessage("ターゲットが見つかりました。", "一致したQRを青枠で強調表示しています");
             showToastNearBox("ロック", pts);
+
+            // ★ 音声: 一致した瞬間に読み上げ（URLの wn 優先、無ければQR内の wn）
+            speakFoundOnce(state.currentTarget.wn || (p && p.wn) || "");
+
             holdScan(CONFIG.holdDuration);
             setTimeout(() => { state.isLocked = false; }, CONFIG.lockCooldown);
           }
         } else {
-          // 別形式のQRにも赤点線
           drawBox(pts, CONFIG.colors.ng, "別QR", 'dashed');
           updateHistory(raw, 'other', false);
         }
@@ -511,7 +555,12 @@
       DOM.historyModal.style.display = 'block';
     }
 
-    DOM.btnStart.addEventListener("click", startCam);
+    DOM.btnStart.addEventListener("click", () => {
+      initTTS();      // ← ユーザー操作中に初期化
+      unlockTTS();    // ← iOSで声が出ない問題の回避
+      startCam();
+    });
+
     DOM.btnStop.addEventListener("click", stopCam);
     DOM.btnHistory.addEventListener("click", showHistoryModal);
     DOM.closeModal.addEventListener("click", () => DOM.historyModal.style.display = 'none');
@@ -536,7 +585,6 @@
       img.src = URL.createObjectURL(file);
     });
 
-    // jsQR の複数検出（静止画テスト用）
     function jsqrMulti(imgData) {
       const hits = [];
       const maskedData = new Uint8ClampedArray(imgData.data);
