--- a/public/find-die_deep.html
+++ b/public/find-die_deep.html
@@ -89,8 +89,8 @@
     <div class="panel">
       <div class="card"><h4>🎯 ターゲット</h4><div class="target-info">Book: <b id="tgtBN">-</b> | WC: <b id="tgtWC">-</b><br><span id="tgtWN" class="muted"></span></div></div>
       <div class="card"><h4> 棚 探すべき棚</h4><div id="currentShelf" class="muted">（URL未指定）</div></div>
-      <div class="card"><h4>⚙️ 操作</h4><div class="controls"><button id="btnStart" class="primary">カメラ開始</button><button id="btnStop" disabled>停止</button><button id="btnHistory">スキャン履歴</button></div><div class="legend"><span class="chip ok">一致</span><span class="chip ng">不一致</span></div></div>
-      <div class="card"><h4>💡 ヒント</h4><div class="muted" style="font-size:13px;">・URLパラメータ <code>?book=...&wc=...&loc=...</code> で探す抜型と棚を指定します。<br>・ターゲットと一致したQRは<strong style="color:var(--ok)">青枠</strong>と音と振動でお知らせします。</div></div>
+      <div class="card"><h4>⚙️ 操作</h4><div class="controls"><button id="btnStart" class="primary">カメラ開始</button><button id="btnStop" disabled>停止</button><button id="btnHistory">スキャン履歴</button></div><div class="legend"><span class="chip ok">一致</span><span class="chip ng">不一致</span><span class="chip loc">棚</span></div></div>
+      <div class="card"><h4>💡 ヒント</h4><div class="muted" style="font-size:13px;">・URLパラメータ <code>?book=...&wc=...&loc=...</code> で探す抜型と棚を指定します。<br>・ターゲットと一致したQRは<strong style="color:var(--ok)">青枠</strong>と音と振動でお知らせします。<br>・棚のQRコードは<strong style="color:var(--loc)">緑枠</strong>で表示します。</div></div>
     </div>
   </div>
   <div id="historyModal" class="modal"><div class="modal-content"><div class="modal-header"><h4>スキャン履歴</h4><span id="closeModal" class="close-button">&times;</span></div><ul id="historyList"></ul></div></div>
@@ -133,22 +133,23 @@
       scanHistory: new Map(),
     };
 
-    /* ====== 音声読み上げ（見つかりました / WorkName 付き） ====== */
+    /* ====== 音声読み上げ ====== */
     let __ttsReady = false;
     let __jpVoices = [];
-    let __lastSpeak = 0;           // 連続検出の連呼防止
+    let __lastSpeak = 0;
+    let __lastLocSpeak = 0;
     const __speakCooldownMs = 1500;
+    const __locSpeakCooldownMs = 3000;
 
     function initTTS() {
       if (!('speechSynthesis' in window)) return;
       const synth = window.speechSynthesis;
       function loadVoices() {
         const voices = synth.getVoices();
-        // 日本語ボイス抽出＋好みの順に並べ替え（高めトーンに合いやすい候補を先頭へ）
         __jpVoices = voices
           .filter(v => /ja|jpn|日本語/i.test(v.lang) || /日本語/i.test(v.name))
           .sort((a,b) => {
-            const pref = ['Google 日本語', 'Kyoko', 'Otoya']; // 上にあるほど優先
+            const pref = ['Google 日本語', 'Kyoko', 'Otoya'];
             const ia = pref.findIndex(p => a.name.includes(p));
             const ib = pref.findIndex(p => b.name.includes(p));
             return (ia === -1 ? 999 : ia) - (ib === -1 ? 999 : ib);
@@ -161,19 +162,16 @@
 
     const punct = s => String(s||"").replace(/\s+/g, ' ').trim();
 
-    // TTSの"起こし"と確実実行ユーティリティ
     function unlockTTS() {
       if (!('speechSynthesis' in window)) return;
-      const u = new SpeechSynthesisUtterance(' '); // 無音に近い短い発話で起こす
+      const u = new SpeechSynthesisUtterance(' ');
       u.lang = 'ja-JP'; u.volume = 0; u.rate = 1; u.pitch = 1;
       try { window.speechSynthesis.speak(u); } catch {}
     }
 
-    /** voices がまだでも少し待ってから確実に発話 */
     function speakAfterReady(utterance) {
       if (!('speechSynthesis' in window)) return;
       const synth = window.speechSynthesis;
-      // すぐに voices が空なら少し待ってから再試行
       const trySpeak = (retries = 2) => {
         try { synth.cancel(); } catch {}
         const voices = synth.getVoices();
@@ -191,13 +189,12 @@
       trySpeak();
     }
 
-    function speakFoundOnce(workName /* string | undefined */) {
+    function speakFoundOnce(workName) {
       if (!('speechSynthesis' in window)) return;
       const now = performance.now();
       if (now - __lastSpeak < __speakCooldownMs) return;
       __lastSpeak = now;
 
-      // ★ セリフを変更（WorkNameがあれば差し込み）
       const hasWN = !!workName && String(workName).trim().length > 0;
       const text = hasWN
         ? `お探しの型、${workName}、が見つかりました。`
@@ -205,25 +202,35 @@
 
       const u = new SpeechSynthesisUtterance(punct(text));
       u.lang   = 'ja-JP';
-      u.rate   = 1.05;   // 少し速め
-      u.pitch  = 1.3;    // ★ 高めのトーン
+      u.rate   = 1.05;
+      u.pitch  = 1.3;
       u.volume = 1.0;
 
-      // 好みの日本語ボイスがあれば選択
       if (__jpVoices.length > 0) u.voice = __jpVoices[0];
-
       speakAfterReady(u);
     }
 
-    // 早期TTS初期化のためのイベントリスナー
+    function speakLocFound() {
+      if (!('speechSynthesis' in window)) return;
+      const now = performance.now();
+      if (now - __lastLocSpeak < __locSpeakCooldownMs) return;
+      __lastLocSpeak = now;
+
+      const u = new SpeechSynthesisUtterance("正しい棚を探しています");
+      u.lang   = 'ja-JP';
+      u.rate   = 1.0;
+      u.pitch  = 1.1;
+      u.volume = 0.8;
+
+      if (__jpVoices.length > 0) u.voice = __jpVoices[0];
+      speakAfterReady(u);
+    }
+
     document.addEventListener('pointerdown', function __once() {
       initTTS();
       document.removeEventListener('pointerdown', __once, true);
     }, true);
     /* ====== /音声読み上げ ====== */
-
-    // ---- 環境判定（Android対策）----
-    const isAndroid = /Android/i.test(navigator.userAgent);
 
     function cssVarOr(name, fallback) {
       const v = getComputedStyle(document.documentElement).getPropertyValue(name);
@@ -451,6 +458,7 @@
 
     function applyDetections(detections) {
       let anyMatch = false;
+      let locFound = false;
       overlayCtx.clearRect(0, 0, DOM.overlay.width, DOM.overlay.height);
 
       for (const d of (detections || [])) {
@@ -478,12 +486,19 @@
             showBigMessage("ターゲットが見つかりました。", "一致したQRを青枠で強調表示しています");
             showToastNearBox("ロック", pts);
 
-            // ★ 音声: 一致した瞬間に読み上げ（URLの wn 優先、無ければQR内の wn）
             speakFoundOnce(state.currentTarget.wn || (p && p.wn) || "");
 
             holdScan(CONFIG.holdDuration);
             setTimeout(() => { state.isLocked = false; }, CONFIG.lockCooldown);
           }
+        } else if (kind === 'loc') {
+          // loc QRコードを見つけた場合
+          drawBox(pts, CONFIG.colors.loc, "棚", 'solid');
+          updateHistory(raw, 'loc', false);
+          locFound = true;
+          
+          // 棚QRコードを見つけたときの音声
+          speakLocFound();
         } else {
           drawBox(pts, CONFIG.colors.ng, "別QR", 'dashed');
           updateHistory(raw, 'other', false);
@@ -491,8 +506,21 @@
       }
 
       if (!state.holdTimer) {
-        const msg = detections.length > 0 ? (anyMatch ? "ターゲット発見" : `${detections.length}件検知`) : "探索中...";
-        const statusType = anyMatch ? "ok" : (detections.length > 0 ? "ng" : "info");
+        let msg = "探索中...";
+        let statusType = "info";
+        
+        if (detections.length > 0) {
+          if (anyMatch) {
+            msg = "ターゲット発見";
+            statusType = "ok";
+          } else if (locFound) {
+            msg = "棚を発見";
+            statusType = "loc";
+          } else {
+            msg = `${detections.length}件検知`;
+            statusType = "ng";
+          }
+        }
         updateStatus(msg, statusType);
       }
     }
@@ -521,6 +549,7 @@
           const li = document.createElement('li');
           let status = '';
           if(data.kind === 'die') status = data.isMatch ? '✔️ 一致' : '❌ 不一致';
+          else if(data.kind === 'loc') status = '📚 棚';
           else status = '❓ その他';
           li.innerHTML = `<strong>${status}:</strong> ${raw.substring(0, 60)}${raw.length > 60 ? '...' : ''}`;
           DOM.historyList.appendChild(li);
@@ -530,8 +559,8 @@
     }
 
     DOM.btnStart.addEventListener("click", () => {
-      initTTS();      // ← ユーザー操作中に初期化
-      unlockTTS();    // ← iOSで声が出ない問題の回避
+      initTTS();
+      unlockTTS();
       startCam();
     });
 
