--- a/public/find-die.html
+++ b/public/find-die.html
@@ -235,14 +235,14 @@
       // ★ セリフを変更（WorkNameがあれば差し込み）
       const hasWN = !!workName && String(workName).trim().length > 0;
       const text = hasWN
-        ? `お探しの型、${workName}、が見つかりました。`
-        : `お探しの型が見つかりました。`;
+        ? `お探しの型、${workName}、が見つかりました！`
+        : `お探しの型が見つかりました！`;
 
       const u = new SpeechSynthesisUtterance(punct(text));
       u.lang   = 'ja-JP';
       u.rate   = 1.05;   // 少し速め
-      u.pitch  = 1.3;    // ★ 高めのトーン
-      u.volume = 1.0;
+      u.pitch  = 1.4;    // ★ 高めのトーン
+      u.volume = 1.2;
 
       // 好みの日本語ボイスがあれば選択
       if (__jpVoices.length > 0) u.voice = __jpVoices[0];
