--- a/public/find-die.html
+++ b/public/find-die.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8" />
-<title>抜型ファインダー voice</title>
+<title>抜型ファインダー gpt</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
   :root {
